Ensure signed int are written in base 10 notation

The code was converting signed ints/chars/shorts to hex notation without
prepanding the '0x'. This led to Bluez reading the value as base 10 value
and created the problem that values containing letters were improperly
parsed.

Fixes: QTBUG-73330
Change-Id: I9407a82495761b2e541e13b282ad6ccdb7cdd84a
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>